arreglando bug de scrollbar overlay

--- a/src/index.css
+++ b/src/index.css
@@ -1,8 +1,11 @@
 
 
 body {
-    max-height: 100vh;
-    overflow-y: overlay;
+    overflow: hidden;
+}
+
+body::-webkit-scrollbar{
+    width: 0px;
 }
 
 
